# Geometry_based_preprocessing_for_GNNs

./: .gitignore  Dockerfile  Readme.md  Report.md  TestEdges.csv  docker-compose.yml  makefile  pyproject.toml  requirements.txt  requirements_train.txt  transaction_network.html  ~$Presentation.pptx
.devcontainer/: devcontainer.json
src/: Timestamps.csv  benchmark_testing.sh  dash_front_end.py  data_config.json  data_insertion_to_neo4j.py  data_loader_GNN.py  inference.py  main.py  pre_test.csv  test.csv  test_feet.csv  train_util.py  training.py  util.py
src/app/: app_backend.py  app_frontend.py  app_util.py  data_loader_inference.py
src/models/: checkpoint_GBPre_GAT.tar  checkpoint_GBPre_GIN.tar  checkpoint_GBPre_PNA.tar  checkpoint_GBPre_RCGN.tar  checkpoint_no_GBPre_GAT.tar  checkpoint_no_GBPre_GIN.tar  checkpoint_no_GBPre_PNA.tar  checkpoint_no_GBPre_RCGN.tar  checkpoint_no_pretrain.tar
src/preprocessing/: GBpre.cypher  preprocessing.cypher
src/stats/: Neo4jStatisticsReport.py
src/tests/: test_data_insertion_to_neo4j.py  test_data_loader_GNN.py  test_train_GNN.py
src/wandb/: latest-run
src/wandb/run-20241213_164014-vbyeebv1/: run-vbyeebv1.wandb
src/wandb/run-20241213_164414-bbdjl19h/: run-bbdjl19h.wandb
src/wandb/run-20241213_164606-59l0yjzn/: run-59l0yjzn.wandb
src/wandb/run-20241213_164812-m3jln6ue/: run-m3jln6ue.wandb
src/wandb/run-20241213_165023-smvknkyg/: run-smvknkyg.wandb
src/wandb/run-20241213_165222-le37bfv0/: run-le37bfv0.wandb
src/wandb/run-20241213_170849-e9ezws2z/: run-e9ezws2z.wandb
src/wandb/run-20241213_172514-039y035d/: run-039y035d.wandb
src/wandb/run-20241213_183429-1wgr3ny9/: run-1wgr3ny9.wandb
src/wandb/run-20241214_094732-0ohcxjsg/: run-0ohcxjsg.wandb
src/wandb/run-20241214_095740-bwogvbre/: run-bwogvbre.wandb
tests/: test_data_insertion_to_neo4j.py  test_data_loader_GNN.py  test_train_GNN.py
(+110 files in other folders)
