[tool.poetry]
name = "dont-steal-my-taxes"
version = "0.1.0"
description = ""
authors = ["dominik-pichler <info@dominik-pichler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
neo4j = "^5.26.0"
pyg = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
lz4 = "*"
matplotlib = "*"
munch = "*"
numpy = "^1.25.2"
scikit-learn = "1.3.0"
scipy = "*"
tqdm = "*"
wandb = "*"
zstandard = "*"
zstd = "*"
datatable = "*"
tabulate = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"