[tool.poetry]
name = "dont-steal-my-taxes"
version = "0.1.0"
description = ""
authors = ["dominik-pichler <info@dominik-pichler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
neo4j = "*"
pyg = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
lz4 = "*"
matplotlib = "*"
munch = "*"
numpy = "*"
scikit-learn = "*"
scipy = "*"
tqdm = "*"
wandb = "*"
zstandard = "*"
zstd = "*"
datatable = "*"
tabulate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
