[tool.poetry]
name = "dont-steal-my-taxes"
version = "0.1.0"
description = ""
authors = ["dominik-pichler <info@dominik-pichler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
neo4j = "^5.26.0"
lz4 = "^4.3.3"
matplotlib = "^3.9.2"
munch = "^4.0.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
tqdm = "^4.67.0"
wandb = "^0.18.7"
zstandard = "^0.23.0"
zstd = "^1.5.5.1"
datatable = "^1.1.0"
tabulate = "^0.9.0"
py2neo = "^2021.2.4"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
isodate = "^0.7.2"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
